--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -13,8 +13,10 @@
         <div class="content-wrapper"> <!--This is the content with the background white-->
             <div class="container container-portfolio">
                 
-                    <div class="div1"> 
-                        <div class="image"></div>
+                    <div class="div1">
+                        <div class="div1-inner">
+                            <h1>Health Landing Page</h1>
+                        </div>  
                     </div>
                     <div class="div2"> </div>
                     <div class="div3"> </div>
